# bert-syntax-it

./: .pre-commit-config.yaml  README.md  bert_utils.py  compare_compute_model_score.py  compute_model_score.py  gpt_tests.py  lm_utils.py  notebook.ipynb  notebook.py  preprocessing_checks.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_int_tests.txt  run_sprouse_tests.py  run_tests.py  setup.cfg  tox.ini  vocab-it.py  vocab_it.py  vocabulary.csv  vocabulary_it.csv
.github/workflows/: tests.yml
generation_projects/blimp/: determiner_noun_agreement_1.py
int_tests/: diagnostics_with_plots.py  int_tests_utils.py  integration_tests_utils.py  legacy_tests.py  profile_model_scoring.py  test_lm_utils.py  test_load_models.py  test_model_scoring.py  test_roberta_sentencepiece_tokenizer.py  test_run_testsets.py  test_testset.py
int_tests/test_data/blimp/: mini_wh_island.jsonl
int_tests/test_data/custom_it/: mini_wh_adjunct_islands.jsonl
int_tests/test_data/sprouse/: mini_wh_adjunct_island.jsonl  mini_wh_complex_np.jsonl  mini_wh_subject_island.jsonl  mini_wh_whether_island.jsonl  wh_adjunct_island.jsonl
models/: RoBerta_variants.py
outputs/: errors-bert-base-italian-xxl-cased.txt
outputs/blimp/: determiner_noun_agreement_1.jsonl  determiner_noun_agreement_1_backup.jsonl
outputs/mdd2/: wh_adjunct_islands.jsonl.csv  wh_complex_np_islands.jsonl  wh_complex_np_islands.jsonl.csv  wh_subject_islands.jsonl  wh_subject_islands.jsonl.csv  wh_whether_island.jsonl  wh_whether_island.jsonl.csv
outputs/multiple/: wh_adjunct_islands_conditional.jsonl  wh_adjunct_islands_temporal.jsonl
outputs/sprouse/: Experiment 2 materials - Italian.csv  custom-wh_complex_np_islands.jsonl  custom-wh_subject_islands.jsonl  custom-wh_whether_island.jsonl  mini_wh_adjunct_island.jsonl  rc_adjunct_island.jsonl  rc_complex_np.jsonl  rc_subject_island.jsonl  rc_wh_island.jsonl  wh_adjunct_island.jsonl  wh_complex_np.jsonl  wh_subject_island.jsonl  wh_whether_island.jsonl
outputs/sprouse/drafts/: Experiment 2 materials - Italian.csv  custom-wh_adjunct_islands.jsonl
outputs/syntactic_tests_it/: mini_wh_adjunct_islands.jsonl  residuals.jsonl  variations_tests.jsonl  wh_adjunct_islands.jsonl  wh_complex_np_islands.jsonl  wh_island.jsonl  wh_subject_islands.jsonl  wh_whether_island.jsonl
outputs/variations/: wh_adjunct_islands.jsonl  wh_adjunct_islands_2.jsonl  wh_complex_np_3.jsonl  wh_complex_np_islands_2.jsonl  wh_complex_np_islands_4.jsonl  wh_complex_np_islands_5.jsonl  wh_complex_np_islands_6.jsonl  wh_complex_np_islands_7.jsonl  wh_complex_np_islands_8.jsonl  wh_complex_np_islands_9.jsonl  wh_subject_islands.jsonl  wh_whether_island.jsonl  wh_whether_island2.jsonl  wh_whether_island3.jsonl
src/linguistic_tests/: bert_utils.py  compute_model_score.py  data.json  file_utils.py  gpt_perplexity_calc.py  gpt_tests.py  lm_utils.py  notebook.ipynb  notebook.py  plots_and_prints.py  preprocessing_checks.py  run_factorial_test_design.py  run_legacy_tests.py  run_minimal_pairs_test_design.py  run_sprouse_tests.py  run_syntactic_tests.py  run_test_design.py  run_tests.py  testset.py  testsuite.py
src/linguistic_tests/generation_projects/blimp/: adjunct_island.py  anaphor_gender_agreement.py  anaphor_number_agreement.py  animate_subject_passive.py  animate_subject_transitive.py  causative.py  complex_NP_island.py  coordinate_structure_constraint_complex_left_branch.py  coordinate_structure_constraint_object_extraction.py  coordinate_structure_constraint_subject_extraction.py  determiner_noun_agreement_1.py  determiner_noun_agreement_2.py  determiner_noun_agreement_irregular_1.py  determiner_noun_agreement_irregular_2.py  determiner_noun_agreement_with_adj_1.py  determiner_noun_agreement_with_adj_2.py  determiner_noun_agreement_with_adj_irregular_1.py  determiner_noun_agreement_with_adj_irregular_2.py  distractor_agreement_rc.py  distractor_agreement_relational_noun.py  drop_argument.py  ellipsis_n_bar_1.py  ellipsis_n_bar_2.py  existential_there_object_raising.py  existential_there_quantifiers_1.py  existential_there_quantifiers_2.py  existential_there_subject_raising.py  expletive_it_object_raising.py  inchoative.py  intransitive.py  irregular_past_participle_adjectives.py  irregular_past_participle_verbs.py  irregular_plural_subject_verb_agreement_1.py  irregular_plural_subject_verb_agreement_2.py  left_branch_island_echo_question.py  left_branch_island_simple_question.py  matrix_question_npi_licensor_present.py  (+33 more)
src/linguistic_tests/utils/: constituent_building.py  data_generator.py  metadata_parse.py  string_utils.py  vocab_it.py  vocab_sets.py  vocab_table.py
src/misc/: misc_checks.py  run_legacy_tests.py
src/misc/utils/: conjugate.py  data_generator.py  data_type.py  embed.py  exceptions.py  randomize.py  vocab_table.py
unit_tests/: test_bert_utils.py  test_compute_model_score.py  test_file_utils.py  test_gpt_tests.py  test_lm_utils.py  test_new_features.py  test_notebook.py  test_run_sprouse_tests.py  test_run_syntactic_tests.py  test_str_enum.py  test_testset.py
utils/: conjugate.py  constituent_building.py  data_generator.py  vocab_sets.py  vocab_table.py
vocabulary/: all_irregular_nouns.npy  all_null_plural_nouns.npy  vocab_documentation.md  vocab_it.py  vocabulary.xlsx  vocabulary_it.csv  vocabulary_min.csv
(+39 files in other folders)
