[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=linguistic_tests"
testpaths = [
    "unit_tests",
]
norecursedirs = [
    "src/linguistic_tests/generation_projects/*",
    "src/linguistic_tests/generation_projects/blimp/*",
    "src/linguistic_tests/utils/*",
]

[tool.coverage.run]
omit = [
    "src/linguistic_tests/generation_projects/*",
    "src/linguistic_tests/generation_projects/blimp/*",
    "src/linguistic_tests/utils/*",
]

[tool.coverage.report]
omit = [
    "src/linguistic_tests/generation_projects/*",
    "src/linguistic_tests/generation_projects/blimp/*",
    "src/linguistic_tests/utils/*",
]

[tool.mypy]
mypy_path = "src"

[mypy]
exclude = "/src/linguistic_tests/generation_projects/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
