[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--cov=linguistic_tests",
    "--cov-report=term",
    "--cov-report=html",
    "--disable-socket",
    "--durations=5",
]
testpaths = [
    "unit_tests",
]
python_files = ["test_*.py",]
norecursedirs = [
    "src/linguistic_tests/generation_projects/*",
    "src/linguistic_tests/generation_projects/blimp/*",
    "src/linguistic_tests/utils/*",
    ".benchmarks",
    ".git",
    ".github",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    "__pycache__",
    "logs",
    "models",
    "outputs",
    "src",
    "vocabulary",
    "int_tests/.benchmarks",
    "int_tests/htmlcov",
    "unit_tests/.benchmarks",
    "unit_tests/coverage_html_report",
    "unit_tests/htmlcov",
    "*py_cache*",
]

[tool.coverage.run]
-source = [
    "linguistic_tests",
]

omit = [
    "src/linguistic_tests/generation_projects/*",
    "src/linguistic_tests/generation_projects/blimp/*",
    "src/linguistic_tests/utils/*",
    "src/linguistic_tests/utils",
    "linguistic_tests/utils/*",
    "linguistic_tests/utils",
    "utils/*",
    "utils",
    "*/linguistic_tests/utils/*",
]

[tool.coverage.report]
omit = [
    "src/linguistic_tests/generation_projects/*",
    "src/linguistic_tests/generation_projects/blimp/*",
    "src/linguistic_tests/utils/*",
    "src/linguistic_tests/utils",
    "linguistic_tests/utils/*",
    "linguistic_tests/utils",
    "utils/*",
    "utils",
    "*/linguistic_tests/utils/*",
]

[tool.coverage.html]
directory = 'unit_tests/coverage_html_report'

[tool.mypy]
mypy_path = "src"

[mypy]
exclude = "/src/linguistic_tests/generation_projects/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
