[metadata]
name = linguistic_tests

[options]
packages = linguistic_tests
install_requires =
    transformers
    torch
    scipy
    pandas
    cython
    sentencepiece
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
linguistic_tests = py.typed

[flake8]
max-line-lenght = 160
exclude = linguistic_tests/generation_projects
